--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,6 +82,7 @@ jobs:
 
   release:
     if: startsWith(github.ref, 'refs/tags/')
+    needs: ["ci-linux", "ci-windows", "ci-macos"]
     runs-on: ubuntu-latest
     steps:
 
