--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,6 +84,8 @@ jobs:
   release:
     if: startsWith(github.ref, 'refs/tags/')
     needs: ["ci-linux", "ci-windows", "ci-macos"]
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
 
